This commit update the dash

--- a/index.qmd
+++ b/index.qmd
@@ -65,6 +65,7 @@ densnv::mp_heatmap(geocoded_datasets = z,
                    cve_edo = "21",
                    locality = "Heroica Puebla de Zaragoza",
                    status_caso = c(1, 2),
+                   kernel = 400,
                    week = c(1:53),
                    zoom = NULL,
                    map_type = NULL,
@@ -80,6 +81,7 @@ densnv::mp_heatmap(geocoded_datasets = z,
                    locality = "Tehuacan",
                    status_caso = c(1, 2),
                    week = c(1:53),
+                   kernel = 380,
                    zoom = NULL,
                    map_type = NULL,
                    alpha = 0.6,
@@ -93,6 +95,7 @@ densnv::mp_heatmap(geocoded_datasets = z,
                    cve_edo = "21",
                    locality = "Izucar de Matamoros",
                    status_caso = c(1, 2),
+                   kernel = 1000,
                    week = c(1:53),
                    zoom = NULL,
                    map_type = NULL,
