--- a/index.qmd
+++ b/index.qmd
@@ -72,6 +72,7 @@ densnv::mp_heatmap(geocoded_dataset = z,
                    map_type = NULL,
                    alpha = 0.6,
                    static = FALSE,
+                    save = FALSE,
                    palette = viridis::turbo)
 ```
 
@@ -87,6 +88,7 @@ densnv::mp_heatmap(geocoded_dataset = z,
                    map_type = NULL,
                    alpha = 0.6,
                    static = FALSE,
+                    save = FALSE,
                    palette = viridis::turbo)
 ```
 
@@ -102,6 +104,7 @@ densnv::mp_heatmap(geocoded_dataset = z,
                    map_type = NULL,
                    alpha = 0.6,
                    static = FALSE,
+                    save = FALSE,
                    palette = viridis::turbo)
 ```
 
